phase2_Dev/src/objects/Non_Compliant_Item_Regulation__c.object
<CustomObject>
    <description>Junction between non compliant items and regulations so multiple regulations can be added to one non-compliant item.</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvestigationID__c</fullName>
        <formula>Non_Compliant_Item__r.Investigation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InvestigationID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Compliant_Item__c</fullName>
        <label>Non Compliant Item</label>
        <referenceTo>Non_Compliant__c</referenceTo>
        <relationshipLabel>Associated Regulations</relationshipLabel>
        <relationshipName>Non_Compliant_Item_Regulations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Regulation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regulation</label>
        <referenceTo>Regulation__c</referenceTo>
        <relationshipLabel>Non Compliant Item Regulations</relationshipLabel>
        <relationshipName>Non_Compliant_Item_Regulations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Non Compliant Item Regulation</label>
    <nameField>
        <displayFormat>NC-R-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Non Compliant Item Regulations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Regulation_match_provider_type</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(OR(
(INCLUDES(Regulation__r.Applicable_To__c,&apos;Adoption Agency&apos;) &amp;&amp; Non_Compliant_Item__r.Investigation__r.Provider_No__r.RecordType.Name = &apos;Adoption Agency&apos;), (INCLUDES(Regulation__r.Applicable_To__c, &apos;Family Child Care&apos;) &amp;&amp; OR(Non_Compliant_Item__r.Investigation__r.Provider_No__r.RecordType.Name = &apos;Family Child Care&apos;, Non_Compliant_Item__r.Investigation__r.Provider_No__r.RecordType.Name = &apos;FCC Assistant&apos;)), (INCLUDES(Regulation__r.Applicable_To__c,&apos;Foster Care Agency&apos;) &amp;&amp; Non_Compliant_Item__r.Investigation__r.Provider_No__r.RecordType.Name = &apos;Foster Care Agency&apos;), (INCLUDES(Regulation__r.Applicable_To__c,&apos;Group Care&apos;) &amp;&amp; Non_Compliant_Item__r.Investigation__r.Provider_No__r.RecordType.Name = &apos;Group Care&apos;),(INCLUDES(Regulation__r.Applicable_To__c,&apos;Large Group&apos;) &amp;&amp; Non_Compliant_Item__r.Investigation__r.Provider_No__r.RecordType.Name = &apos;Large Group&apos;),(INCLUDES(Regulation__r.Applicable_To__c,&apos;Large and Small Group Umbrella&apos;) &amp;&amp; Non_Compliant_Item__r.Investigation__r.Provider_No__r.RecordType.Name = &apos;Large and Small Group Umbrella&apos;),(INCLUDES(Regulation__r.Applicable_To__c,&apos;R&amp;P Umbrella&apos;) &amp;&amp; Non_Compliant_Item__r.Investigation__r.Provider_No__r.RecordType.Name = &apos;R&amp;P Umbrella&apos;),(INCLUDES(Regulation__r.Applicable_To__c,&apos;Small Group&apos;) &amp;&amp; Non_Compliant_Item__r.Investigation__r.Provider_No__r.RecordType.Name = &apos;Small Group&apos;), 
(INCLUDES(Regulation__r.Applicable_To__c,&apos;Temporary Shelter&apos;) &amp;&amp; Non_Compliant_Item__r.Investigation__r.Provider_No__r.RecordType.Name = &apos;Temporary Shelter&apos;), 
(INCLUDES(Regulation__r.Applicable_To__c,&apos;Unlicensed Provider&apos;) &amp;&amp; Non_Compliant_Item__r.Investigation__r.Provider_No__r.RecordType.Name = &apos;Unlicensed Provider&apos;))
)</errorConditionFormula>
        <errorMessage>Regulation associated with this item does not  match the provider type. Please select another regulation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Update_on_legacy_NonComp_Reg_not_allowd</fullName>
        <active>false</active>
        <errorConditionFormula>TEXT(Non_Compliant_Item__r.Correction_Plan_Status__c) == &apos;Legacy Non-compliance&apos;</errorConditionFormula>
        <errorMessage>Updates not allowed on legacy data.</errorMessage>
    </validationRules>
</CustomObject>